# hell-workers

./: .cursorignore  .cursorrules  .env  .geminiignore  .gitignore  .kilocodeignore  .kilocoderules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  PHASE2_CODEBASE_ANALYSIS.md  PHASE2_CODE_SIGNATURES.md  PHASE2_DOCUMENTATION_INDEX.md  PHASE2_QUICK_REFERENCE.md  README.md  README_WHEELBARROW_DOCS.txt  Trunk.toml  WHEELBARROW_ANALYSIS.md  WHEELBARROW_DOCUMENTATION_INDEX.md  WHEELBARROW_QUICK_REFERENCE.md  build_error.txt  build_error_final.txt  build_error_final_final.txt  build_error_final_final_utf8.txt  build_error_final_utf8.txt  build_error_utf8.txt  build_errors.txt  check_out.txt  game_log.txt  index.html  rust-analyzer.toml
crates/bevy_app/: Cargo.toml
crates/bevy_app/examples/: visual_test.rs
crates/bevy_app/src/: README.md  app_contexts.rs  assets.rs  events.rs  lib.rs  main.rs  relationships.rs  test_support.rs
crates/bevy_app/src/entities/: README.md  mod.rs  spawn_position.rs
crates/bevy_app/src/entities/damned_soul/: mod.rs  observers.rs  spawn.rs
crates/bevy_app/src/entities/familiar/: animation.rs  components.rs  mod.rs  movement.rs  range_indicator.rs  spawn.rs
crates/bevy_app/src/input_actions/: bindings.rs  cancel.rs  capture.rs  context.rs  mod.rs  model.rs  resolver.rs  tests.rs
crates/bevy_app/src/interface/: README.md  camera.rs  mod.rs
crates/bevy_app/src/interface/selection/: hit_test.rs  input.rs  mod.rs  mode.rs  state.rs
crates/bevy_app/src/interface/ui/: README.md  dev_panel.rs  mod.rs  notifications.rs  vignette.rs
crates/bevy_app/src/plugins/: README.md  game.rs  input.rs  input_tests.rs  interface.rs  interface_debug.rs  logic.rs  messages.rs  mod.rs  spatial.rs  visual.rs
crates/bevy_app/src/plugins/startup/: asset_catalog.rs  mod.rs  perf_scenario.rs  rtt_composite.rs  rtt_setup.rs  rtt_test_scene.rs  startup_systems.rs  visual_handles.rs
crates/bevy_app/src/systems/: README.md  dream_tree_planting.rs  mod.rs  obstacle.rs  time.rs
crates/bevy_app/src/systems/command/: README.md  area_selection.rs  assign_task.rs  indicators.rs  input.rs  mod.rs  stockpile_policy.rs  visualization.rs
crates/bevy_app/src/systems/energy/: grid_lifecycle.rs  grid_recalc.rs  lamp_buff.rs  mod.rs  power_output.rs
crates/bevy_app/src/systems/familiar_ai/: README.md  _rules.md  diagnostics.rs  mod.rs
crates/bevy_app/src/systems/jobs/: README.md  _rules.md  blueprint_cancellation.rs  construction_metrics.rs  construction_shared.rs  door.rs  door_proximity.rs  mod.rs  mud_mixer.rs
crates/bevy_app/src/systems/logistics/: README.md  mod.rs  ui.rs
crates/bevy_app/src/systems/room/: README.md  _rules.md  components.rs  detection.rs  dirty_mark.rs  mod.rs  resources.rs  validation.rs  visual.rs
crates/bevy_app/src/systems/save/: entities.rs  format.rs  load.rs  mod.rs  register.rs  rehydrate.rs  reset.rs  saving.rs  schema.rs  state.rs  transaction.rs
crates/bevy_app/src/systems/settings/: apply.rs  mod.rs  persistence.rs
crates/bevy_app/src/systems/soul_ai/: README.md  _rules.md  adapters.rs  mod.rs
crates/bevy_app/src/systems/spatial/: blueprint.rs  familiar.rs  grid.rs  mod.rs  soul.rs  stockpile.rs  transport_request.rs
crates/bevy_app/src/systems/visual/: README.md  building3d_cleanup.rs  camera_sync.rs  character_proxy_3d.rs  elevation_view.rs  floor_construction.rs  mod.rs  placement_ghost.rs  section_cut.rs  soul_animation.rs  soul_shadow_projector.rs  task_area_visual.rs  terrain_lod.rs  terrain_material.rs  wall_construction.rs  wall_orientation_aid.rs
crates/bevy_app/src/systems/world/: README.md  mod.rs  zones.rs
crates/bevy_app/src/world/: README.md  mod.rs  regrowth.rs  river.rs
crates/bevy_app/src/world/map/: boundary.rs  mod.rs  spawn.rs  terrain_metadata.rs
crates/hw_ai/: Cargo.toml  README.md
crates/hw_ai/src/: lib.rs
crates/hw_ai/src/familiar_ai/: mod.rs
crates/hw_ai/src/familiar_ai/decide/: following.rs  mod.rs  query_types.rs  scouting.rs  state_decision.rs  supervising.rs
crates/hw_ai/src/familiar_ai/execute/: mod.rs
crates/hw_ai/src/soul_ai/: mod.rs
crates/hw_ai/src/soul_ai/decide/: escaping.rs  gathering_mgmt.rs  mod.rs  separation.rs
crates/hw_ai/src/soul_ai/execute/: designation_apply.rs  drifting.rs  escaping_apply.rs  idle_behavior_apply.rs  mod.rs  task_assignment_apply.rs
crates/hw_ai/src/soul_ai/helpers/: drifting.rs  gathering.rs  gathering_motion.rs  gathering_positions.rs  mod.rs  navigation.rs  query_types.rs  work.rs
crates/hw_ai/src/soul_ai/perceive/: escaping.rs
crates/hw_ai/src/soul_ai/update/: dream_update.rs  gathering_tick.rs  mod.rs  rest_area_update.rs  state_sanity.rs  vitals.rs  vitals_influence.rs  vitals_update.rs
crates/hw_familiar_ai/: Cargo.toml  README.md  _rules.md
crates/hw_familiar_ai/src/: animation.rs  lib.rs  movement.rs
crates/hw_familiar_ai/src/familiar_ai/: mod.rs
crates/hw_familiar_ai/src/familiar_ai/decide/: blueprint_auto_gather.rs  delegation_context.rs  (+12 more)
crates/hw_world/: Cargo.toml  README.md  _rules.md
crates/hw_world/src/: anchor.rs  borders.rs  coords.rs  door_systems.rs  layout.rs  lib.rs  map.rs  mapgen.rs  pathfinding.rs  query.rs  regrowth.rs  river.rs  rock_fields.rs  room_detection.rs  room_systems.rs  spatial.rs  spawn.rs  terrain.rs  terrain_visual.rs  terrain_zones.rs  test_seeds.rs  tree_planting.rs  world_masks.rs  zone_ops.rs  zones.rs
crates/hw_world/src/map/: access.rs  bridges.rs  buildings.rs  doors.rs  mod.rs  obstacles.rs  stockpiles.rs  tiles.rs
crates/hw_world/src/mapgen/: mod.rs  pipeline.rs  resources.rs  types.rs  validate.rs  wfc_adapter.rs
crates/hw_world/src/pathfinding/: budget.rs  connectivity.rs  core.rs  mod.rs
crates/hw_world/src/river/: channel.rs  legacy.rs  sand.rs
crates/hw_world/src/room_detection/: core.rs  ecs.rs  tests.rs
crates/visual_test/: Cargo.toml
crates/visual_test/src/: building.rs  hud.rs  input.rs  main.rs  setup.rs  soul.rs  systems.rs  types.rs
crates/visual_test/src/setup/: scene.rs
crates/visual_test/src/types/: domain.rs  render.rs  state.rs  ui.rs
(+1976 files in other folders)
