[workspace]
resolver = "2"
members = [
    ".",
    "crates/*",
]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "experimental_bevy_ui_widgets",
    "pan_camera",
    "png",
    "jpeg",
    # Windows ネイティブ (x64) では wgpu が DX12/Vulkan を自動選択するため webgl2 は不要
] }
rand = "0.8"

[package]
name = "bevy_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
hw_core = { path = "crates/hw_core" }
hw_jobs = { path = "crates/hw_jobs" }
hw_logistics = { path = "crates/hw_logistics" }
hw_ui = { path = "crates/hw_ui" }
hw_world = { path = "crates/hw_world" }
hw_ai = { path = "crates/hw_ai" }
hw_spatial = { path = "crates/hw_spatial" }

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

# Keep a little optimization for dependencies in dev.
# This is a build-speed-first setting (faster compile/link than opt-level=3).
[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 1
