[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "3d",
    "experimental_bevy_ui_widgets",
    "pan_camera",
    "png",
    "jpeg",
] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

# Keep a little optimization for dependencies in dev.
# This is a build-speed-first setting (faster compile/link than opt-level=3).
[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 1
