[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["crates/bevy_app"]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "3d",
    "experimental_bevy_ui_widgets",
    "pan_camera",
    "png",
    "jpeg",
] }
rand = "0.8"
wfc = "0.10"        # gridbugs/wfc — MIT, seed + ForbidPattern hard constraint
direction = "0.18"  # gridbugs/direction — CardinalDirectionTable (wfc の推移依存だが明示追加)

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

# Dependency optimization in dev (stronger than opt-level=1, still below full release).
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.bevy]
opt-level = 2
