[package]
name = "hw_world"
version = "0.1.0"
edition = "2024"

[features]
default = []
profiling = []

[dependencies]
bevy = { workspace = true }
hw_core = { path = "../hw_core" }
hw_jobs = { path = "../hw_jobs" }
rand = { workspace = true }
serde = { workspace = true }
wfc = { workspace = true }
direction = { workspace = true }
